# futuregolf

./: .gitattributes  .gitignore  .mcp.json  .pdm-python  CLAUDE.md  DEV_STATUS.md  GCS_SETUP_COMPLETE.md  GEMINI.md  MCP_AND_DATABASE_COMPLETE.md  Makefile  NEON_DATABASE_SETUP.md  NEON_MANUAL_SETUP.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_STATUS.md  README.md  RECORDING_SCREEN_FIX_SUMMARY.md  architecture_summary.py  install_debug_app.sh  launch_debug_recording.py  package.json  pyproject.toml  start.sh  test_integration.py  test_new_architecture.py  test_phase1_validation.py  tmp.txt  validate_architecture.py
backend/: .dockerignore  .env.example  .env.neon  .gcloudignore  .gitignore  .mcp.json  CLOUD_RUN_DEPLOYMENT_GUIDE.md  CLOUD_RUN_QUICK_START.md  COMPLETE_PIPELINE_SUMMARY.md  DEPLOYMENT.md  DEV_SPEC.md  Dockerfile  MEDIAPIPE_INTEGRATION_SUMMARY.md  README.md  analyze_full_pipeline.py  analyze_video.py  analyze_video_detailed.py  analyze_video_v2.py  analyze_with_pose.py  cloudbuild.yaml  complete_integration_demo_results_1752142579.json  convert_for_whatsapp.py  create_complete_moviepy.py  create_complete_moviepy_detailed.py  create_complete_narrated.py  create_final_complete.py  create_final_narrated.py  create_narrated_analysis.py  create_narrated_simple.py  create_narrated_v3.py  create_test_frames.py  debug_pose_overlay.py  demo_video_pipeline.py  deploy-to-cloud-run.sh  main.py  make_whatsapp_video.sh  pipeline_demo_results_1752142265.json  pipeline_demo_results_1752142365.json  pyproject.toml  pytest.ini  (+20 more)
backend/.claude/: settings.local.json
backend/api/: _obs.recording_voice.py  auth_login.py  auth_oauth.py  auth_password.py  auth_register.py  debug_info.py  health_check.py  recording_swing.py  recording_voice.py  schemas.py  system.py  tts.py  (+7 more)
(+363 files in other folders)
